# blackbird

./: .gitignore  .gitlab-ci.yml  README.markdown  default.nix  demo-docker.sh  docker-demo.md  docker.nix  project.nix  regen_go_protobufs.sh  shell.nix
compiler/: LICENSE  blackbird.cabal  repl-demo
compiler/etc/: logo.txt
compiler/exe/compiler/: Main.hs
compiler/exe/core-echo/: Main.hs
compiler/exe/demo/: Main.hs
compiler/exe/repl/: Main.hs
compiler/opt/ekg/Blackbird/: Monitor.hs
compiler/opt/no-ekg/Blackbird/: Monitor.hs
compiler/src/Blackbird/: Builtin.hs  Diagnostic.hs  Interpreter.hs  Parser.hs  Pretty.hs  Syntax.hs  Version.hs
compiler/src/Blackbird/Builtin/: Core.hs  Global.hs  Head.hs  Pattern.hs  Term.hs  Type.hs
compiler/src/Blackbird/Console/: Command.hs  Completion.hs  Module.hs  Options.hs  State.hs  Unicode.hsc
compiler/src/Blackbird/Constraint/: Env.hs  Simplification.hs
compiler/src/Blackbird/Core/: Compiler.hs  Lint.hs  Module.hs  Optimizer.hs
compiler/src/Blackbird/Inference/: Kind.hs  Module.hs  Type.hs  Witness.hs
compiler/src/Blackbird/Interchange/: Policy.hs  Witness.hs
compiler/src/Blackbird/Interpreter/: Policy.hs
compiler/src/Blackbird/Loader/: Core.hs  Filesystem.hs  MapCache.hs
compiler/src/Blackbird/Monitor/: Combinators.hs  Exception.hs  Options.hs
compiler/src/Blackbird/Native/: Policy.hs  Witness.hs
compiler/src/Blackbird/Parser/: Data.hs  Global.hs  Keywords.hs  Kind.hs  Literal.hs  Module.hs  Pattern.hs  Policy.hs  Resolver.hs  State.hs  Style.hs  Term.hs  Trifecta.hs  Type.hs
compiler/src/Blackbird/Pattern/: Env.hs  Matching.hs  Matrix.hs
compiler/src/Blackbird/Pretty/: Core.hs  G.hs  Global.hs  Kind.hs  Literal.hs  Meta.hs  Pattern.hs  Policy.hs  Term.hs  Type.hs  Witness.hs
compiler/src/Blackbird/Syntax/: Class.hs  Constructor.hs  Convention.hs  Core.hs  Data.hs  Digest.hs  G.hs  Global.hs  Head.hs  Hint.hs  Id.hs  Instance.hs  Kind.hs  Literal.hs  Module.hs  ModuleName.hs  Name.hs  Pattern.hs  Scope.hs  Sort.hs  Term.hs  Type.hs
compiler/src/Blackbird/Unification/: Class.hs  Data.hs  Kind.hs  Meta.hs  Sharing.hs  Type.hs
compiler/src/Demo/: Server.hs  index.html
compiler/src/Generic/Data/: Two.hs
compiler/src/Proto3/: X.hs
compiler/tests/: doctests.hs  hlint.hs  properties.hs
compiler/tests/properties/: Binary.hs  Inference.hs  Loader.hs  Parser.hs  Pattern.hs  Syntax.hs  Var.hs
compiler/tests/properties/Arbitrary/: Arbitrary.hs  CoreArbitrary.hs  SyntaxArbitrary.hs
compiler/tests/unit-tests/: LoaderTests.hs  ParserTests.hs  TestDef.hs  UnitTests.hs
protobuf/: bytecode.md  policy.proto
verifier/: build  lint  test
verifier/golang/: go.mod  go.sum  staticcheck.conf
verifier/golang/impl/: assets.go  authority.go  builders.go  closure.go  errors.go  generators.go  install.go  install_test.go  table.go  unparse.go  unparse_test.go  utils.go  verify.go  verify_test.go
verifier/golang/protobuf/: policy.pb.go
verifier/golang/simple/: authority.go  errors.go  wrappers.go
verifier/golang/tree/: samplers.go
